<resources>
    <string name="app_name">Task Management</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="password">Password</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_email">Enter Email</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="register_title">Register</string>
    <string name="create_an_account_register">Create an account? Register</string>
    <string name="login">Login</string>
    <string name="back">Back</string>

    <string-array name="status_options">
        <item>Yet to start</item>
        <item>In progress</item>
        <item>Completed</item>
        <item>Hold</item>
    </string-array>


    <string-array name="priority_options">
        <item>High</item>
        <item>Medium</item>
        <item>low</item>
    </string-array>

</resources>