<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/landingpage_gradient"
    tools:context=".register">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="12dp"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_title"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                android:fontFamily="@font/georgia"
                android:layout_marginBottom="8dp"
                app:backgroundTint="@color/rounded_background_tint"
                app:cornerRadius="8dp"
                app:strokeColor="@color/rounded_background_stroke"
                app:strokeWidth="1dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_a_new_account"
                android:fontFamily="@font/kasepi"
                android:textColor="@android:color/holo_purple"
                android:textSize="16sp"
                android:layout_marginBottom="20dp"
                app:backgroundTint="@color/rounded_background_tint"
                app:cornerRadius="8dp"
                app:strokeColor="@color/rounded_background_stroke"
                app:strokeWidth="1dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/kasepi"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:padding="20dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/kasepi"
                    android:hint="@string/enter_your_username"
                    android:inputType="text"
                    android:padding="20dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/kasepi"
                    android:hint="@string/enter_first_name"
                    android:inputType="text"
                    android:padding="20dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/kasepi"
                    android:hint="@string/enter_last_name"
                    android:inputType="text"
                    android:padding="20dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/kasepi"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="20dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordAgainLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordAgain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/kasepi"
                    android:hint="@string/repeat_password"
                    android:inputType="textPassword"
                    android:padding="20dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/registerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="18dp"
                android:layout_marginVertical="9dp"
                android:fontFamily="@font/kasepi"
                android:text="@string/register"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:backgroundTint="#4CAF50"
                app:cornerRadius="24dp"

                app:iconGravity="textStart"
                app:iconPadding="8dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/loginLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/kasepi"
                android:text="@string/already_have_an_account_login"
                android:textColor="#2962FF"
                android:textSize="16sp" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>